Squash a series of past commits.
- config to publish to sonatype
- textarea and checkbox
- revert to use javapoet's ClassName for JavaFX elements, fix: values not update for password fields
- @JFXooTable: generate tableview
- fix typo
- table, form, and action buttons
- jfxootable: position tableview and control inside vbox
- jfxooform: position fields and action buttons inside vbox
- form: add snackbar
- jfxoo-form-snackbar: remove old message after a few seconds
- jfxooform: method to register button event
- declare field labels using @jfxoovar
- handle null values in jfxooform:init()
- fix snackbar message removal
- jfxootable: attach add/edit dialog to current stage + apply the same stylesheets
- Rename origin